--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     password: ab370126
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQL8Dialect
   jackson:
     time-zone: Asia/Shanghai
@@ -13,3 +13,5 @@ spring:
   mvc:
     view:
       suffix: .html
+      prefix: /
+    static-path-pattern: /**
