--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,4 @@
 spring:
-  datasource:
-    url: jdbc:mysql://cym2018.xyz:3306/springboot?&serverTimezone=Asia/Shanghai
-    username: root
-    password: ab370126
-  jpa:
-    hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQL8Dialect
   jackson:
     time-zone: Asia/Shanghai
     date-format: YYYY-MM-dd
@@ -15,3 +7,5 @@ spring:
       suffix: .html
       prefix: /
     static-path-pattern: /**
+server:
+  port: 80
